{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 98,
  "lineage": "8338fcde-765d-6da8-454a-51e7a7120958",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421677556540:internet-gateway/igw-0f8e14942b00e9886",
            "id": "igw-0f8e14942b00e9886",
            "owner_id": "421677556540",
            "region": "us-east-1",
            "tags": {
              "Name": "fastfood-symfony-dev-igw"
            },
            "tags_all": {
              "Name": "fastfood-symfony-dev-igw"
            },
            "vpc_id": "vpc-0b683a0b67ce42619"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f8e14942b00e9886",
            "id": "r-rtb-01fc34b0dbfa684691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-01fc34b0dbfa68469",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421677556540",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01fc34b0dbfa68469"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421677556540:route-table/rtb-01fc34b0dbfa68469",
            "id": "rtb-01fc34b0dbfa68469",
            "owner_id": "421677556540",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "fastfood-symfony-dev-public-rt"
            },
            "tags_all": {
              "Name": "fastfood-symfony-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b683a0b67ce42619"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421677556540",
            "id": "rtb-01fc34b0dbfa68469",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01631ab2da940856a",
            "region": "us-east-1",
            "route_table_id": "rtb-01fc34b0dbfa68469",
            "subnet_id": "subnet-007c3d4cbb2c73cbe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e259c04eaebbdad6",
            "region": "us-east-1",
            "route_table_id": "rtb-01fc34b0dbfa68469",
            "subnet_id": "subnet-0663d57a6e33c8773"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421677556540:security-group/sg-0e9c7c2c0cf3916ec",
            "description": "ECS tasks security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9c7c2c0cf3916ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fastfood-symfony-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "421677556540",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fastfood-symfony-dev-ecs-sg"
            },
            "tags_all": {
              "Name": "fastfood-symfony-dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b683a0b67ce42619"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421677556540",
            "id": "sg-0e9c7c2c0cf3916ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421677556540:security-group/sg-0ae16e13c31666d34",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae16e13c31666d34",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e9c7c2c0cf3916ec"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "fastfood-symfony-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "421677556540",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fastfood-symfony-dev-rds-sg"
            },
            "tags_all": {
              "Name": "fastfood-symfony-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b683a0b67ce42619"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421677556540",
            "id": "sg-0ae16e13c31666d34",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421677556540:subnet/subnet-09aa0b78d08df2b88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aa0b78d08df2b88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421677556540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fastfood-symfony-dev-private-0"
            },
            "tags_all": {
              "Name": "fastfood-symfony-dev-private-0"
            },
            "vpc_id": "vpc-0b683a0b67ce42619"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421677556540",
            "id": "subnet-09aa0b78d08df2b88",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421677556540:subnet/subnet-06208e0cd1cc1d853",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06208e0cd1cc1d853",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421677556540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fastfood-symfony-dev-private-1"
            },
            "tags_all": {
              "Name": "fastfood-symfony-dev-private-1"
            },
            "vpc_id": "vpc-0b683a0b67ce42619"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421677556540",
            "id": "subnet-06208e0cd1cc1d853",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421677556540:subnet/subnet-007c3d4cbb2c73cbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007c3d4cbb2c73cbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421677556540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fastfood-symfony-dev-public-0"
            },
            "tags_all": {
              "Name": "fastfood-symfony-dev-public-0"
            },
            "vpc_id": "vpc-0b683a0b67ce42619"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421677556540",
            "id": "subnet-007c3d4cbb2c73cbe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421677556540:subnet/subnet-0663d57a6e33c8773",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0663d57a6e33c8773",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421677556540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fastfood-symfony-dev-public-1"
            },
            "tags_all": {
              "Name": "fastfood-symfony-dev-public-1"
            },
            "vpc_id": "vpc-0b683a0b67ce42619"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421677556540",
            "id": "subnet-0663d57a6e33c8773",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421677556540:vpc/vpc-0b683a0b67ce42619",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0fe968b5a003cdc84",
            "default_route_table_id": "rtb-04db78137c5ba4728",
            "default_security_group_id": "sg-08e886f0f7b592fc5",
            "dhcp_options_id": "dopt-04a9ddec1672fe946",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b683a0b67ce42619",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04db78137c5ba4728",
            "owner_id": "421677556540",
            "region": "us-east-1",
            "tags": {
              "Name": "fastfood-symfony-dev-vpc"
            },
            "tags_all": {
              "Name": "fastfood-symfony-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421677556540",
            "id": "vpc-0b683a0b67ce42619",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}